@@ -36,18 +36,19 @@ If you have used our framework for research purposes, please cite us with:
 
 .. code:: tex
     @ARTICLE{DMT2022,
-    title     = "{DMT-core}: A python toolkit for semiconductor device engineers",
-    author    = "Krattenmacher, Mario and M{\"u}ller, Markus and Kuthe, Pascal
-                and Schr{\"o}ter, Michael",
-    journal   = "J. Open Source Softw.",
-    publisher = "The Open Journal",
-    volume    =  7,
-    number    =  75,
-    pages     = "4298",
-    month     =  jul,
-    year      =  2022,
-    copyright = "http://creativecommons.org/licenses/by/4.0/"
+        title     = "{DMT-core: A Python Toolkit for Semiconductor Device Engineers}",
+        author    = {Mario Krattenmacher and Markus M{\"u}ller and Pascal Kuthe and Michael Schr{\"o}ter},
+        journal   = {Journal of Open Source Software}
+        publisher = {The Open Journal},
+        volume    =  {7},
+        number    =  {75},
+        pages     = {4298},
+        month     =  {jul},
+        year      =  {2022},
+        doi       = {10.21105/joss.04298},
+        url       = {https://doi.org/10.21105/joss.04298},
     }
+
 
 Currently DMT is developed at `SemiMod <https://semimod.de/>`__, by:
 
